[package]
name = "Desert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_hanabi = "0.6"
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
noise = "0.8.2"
rand = "0.8.5"
bevy_egui = "0.20.1"